# ggez_game_template

./: Cargo.toml
src/: assets.rs  components.rs  error.rs  input.rs  main.rs  systems.rs  utils.rs  world.rs
src/scenes/: level.rs  mod.rs
