[package]
name = "game_template"
version = "0.1.0"
authors = ["Spiros Makris <makris.spiros@gmail.com>"]
edition = "2018"

[dependencies]
# Game stuff
# ggez = { git="https://github.com/ggez/ggez.git", branch="master" }
ggez = "0.5.0-rc.1"
warmy = "0.11.1"
ggez-goodies = { git = "https://github.com/ggez/ggez-goodies", branch = "master" }
specs = "0.14.3"
specs-derive = "0.4.0"

# Utility stuff
log = "0.4.6"
fern =  { version = "0.5.7", features = ["colored"] }
chrono = "0.4.6"
failure = "0.1.5"
